fixed a little misalign that was annoying me for 2 hours

--- a/dtm16.css
+++ b/dtm16.css
@@ -1557,3 +1557,6 @@ svg[name="Nova_AddReaction"] path[d="M21 3V0H19V3H16V5H19V8H21V5H24V3H21Z"] {
 .theme-light .autocompleteRowVertical-q1K4ky .selectorSelected-1_M1WV {
     background: #e3e5e8;
 }
+.premiumGuildIconGem-C4yUDR {
+	transform: translate(0,1px);
+}
